<resources>
    <string name="app_name">PDM_2021_P3_PROYECTO3</string>
    <string name="txtNombre1">Nombre</string>
    <string name="txtApellido1">Apellido</string>
    <string name="txtTelefono">Telefono</string>
    <string name="txtId">Id</string>
    <string name="txtIdentidad">Identidad</string>
    <string name="txtCorreo1">Correo</string>
    <string name="txtEdad">Edad</string>
    <string name="txtIdCaso">Id Caso</string>
    <string name="txtIdCliente1">Id Cliente</string>
    <string name="txtIdAbogado">Id Abogado</string>
    <string name="txtFechaInicio">Fecha Inicial</string>
    <string name="txtFechaFinalizacion">Fecha Final</string>
    <string name="txtIdTipoCaso">Tipo Caso</string>
    <string name="txtPassword">Password</string>
    <string name="txtNombre2">Usuario</string>


    <string name="todo">Name</string>
    <string name="name">Name</string>
    <string name="buffet_abogados_honduras">Buffet Abogados Honduras</string>
    <string name="empleados">Empleados</string>
    <string name="consultanos">Consultanos</string>
    <string name="cita">Cita</string>
    <string name="facturacion">Facturacion</string>
    <string name="tipos_de_casos">Tipos de casos</string>
    <string name="abogados">Abogados</string>
    <string name="clientes">Clientes</string>
    <string name="casos">Casos</string>
    <string name="tipo_de_pago">Tipo de pago</string>
    <string name="pago">Pago</string>

    <string name="agencia">Agencia</string>
    <string name="nuestros_servicios">Nuestros servicios:</string>

    <string name="txtIdEmpleado">Id Empleado</string>
    <string name="txtNombre">Nombre Empleado</string>
    <string name="txtApellidoEmpleado">Apellido</string>
    <string name="txtIdentidad1">Identidad</string>
    <string name="txtCorreo">Correo</string>
    <string name="txtTelefono3">Telefono</string>
    <string name="txtCargo">Cargo</string>

    <string name="txtIdCita">Id Cita</string>
    <string name="txtNombre3">Nombre</string>
    <string name="txtIdTC">Id Tipo de caso</string>
    <string name="txtFecha">Fecha</string>
    <string name="txtIdAbogado1">Id Abogado</string>

    <string name="txtId1">Codigo</string>
    <string name="txtFechaFactura">Fecha</string>
    <string name="txtIdCliente">Id Cliente</string>
    <string name="txtIdEmpleado1">Id Empleado</string>
    <string name="txtIdAbogado2">Id Abogado</string>
    <string name="txtIdCaso1">Id Caso</string>
    <string name="txtIdPago">Id Pago</string>

    <string name="txtIdTc">Id tipo de caso</string>
    <string name="txtDescripcion">Asunto</string>

    <string name="txtIdTipoPago">Id tipo de Pago</string>
    <string name="txtDescripcion1">Asunto</string>

    <string name="txtIdPago1">Id Pago</string>
    <string name="txtTipoPago1">Tipo Pago</string>
    <string name="txtCantidadPago">Cantidad Pagada</string>
    <string name="txtImpuestos">ISV</string>
    <string name="txtTotal">Total</string>
    <string name="txtSubtotal">Subtotal</string>

    <string name="txtIdConsulta">Id Consulta</string>
    <string name="txtNombre4">Nombre</string>
    <string name="txtCorreo2">Correo</string>
    <string name="txtAsunto">Asunto</string>

    <string name="citas">Citas</string>
    <string name="consultas">Consultas</string>
    <string name="clientes1">Clientes</string>
    <string name="add_users">Add Users</string>
    <string name="TODO">TODO</string>
    <string name="factura">Factura</string>
    <string name="empleado">Empleado</string>

    <string name="txtAgregar">Agregar</string>
    <string name="txtActualizar">Actualizar</string>
    <string name="txtGuardar">Guardar</string>
    <string name="txtEliminar">Eliminar</string>


    <string name="txtCitas">Citas</string>
    <string name="txtEmpleados">Empleados</string>
    <string name="txtAbogados">Abogados</string>
    <string name="txtConsultanos">Consultas</string>
    <string name="txtAgencia">Agencias</string>
    <string name="txtCasos">Casos</string>

    <string name="txtId2">Id Cliente</string>
    <string name="txtTipoServicio">Tipo de Servicio</string>
    <string name="txtIdAsunto">Asunto</string>
    <string name="txvEmpleados">Empleados</string>
    <string name="txvFactura">Factura</string>
    <string name="txvConsulta">Consulta</string>
    <string name="txvPago">Pago</string>
    <string name="txvTipoCaso">Tipo de Caso</string>
    <string name="txvTipoPago">Tipo de Pago</string>
    <string name="txvCasos">Casos</string>
    <string name="txvAgencia">Agencia</string>
    <string name="txvServicios">Servicios</string>
    <string name="txvActualizar">Actualizar</string>
    <string name="txvEliminar">Eliminar</string>
    <string name="txvGuardar">Guardar</string>

    <string name="txvBienvenidos">¡Bienvenido!</string>
    <string name="txvCambiar">TextView</string>
    <string name="txtUsuario">Usuario</string>
    <string name="txtContraseña">Contraseña</string>
    <string name="txvRegistrar">Iniciar Sesion</string>
    <string name="txvBuffetAbogados">Buffet Abogados Honduras</string>
    <string name="txvCrearCuenta">Crear Cuenta</string>
    <string name="txvRegistrarse">Registrarse</string>
    <string name="txtUsuario1">Nombre</string>
    <string name="txvCrear">Crear</string>
    <string name="Todo1">TODO</string>

    <string name="txtIdAgencia">Id Agencia</string>
    <string name="txtNombre9">Nombre</string>
    <string name="txtDireccion">Direccion</string>
    <string name="txtContacto">Contacto</string>
    <string name="todo2">TODO</string>

    <string name="txtDni">Dni</string>
    <string name="txtFechaNacimiento1">Fecha de nacimiento</string>
    <string name="txtId3">Id</string>
    <string name="txtFecha1">Fecha</string>
    <string name="txtDescripcion2">Descripcion</string>
    <string name="txtPrecio">Precio</string>
    <string name="txtIdCaso2">Id caso</string>


    <string name="txtId4">Id</string>
    <string name="txtDescripcion3">Descripcion</string>

    <string name="txtId5">Id</string>
    <string name="txtIdCliente2">Id Cliente</string>
    <string name="txtIdAbogado4">Id Abogado</string>
    <string name="txtFecha2">Fecha</string>

    <string name="txtId6">Id</string>
    <string name="txtId7">Id</string>
    <string name="txtId8">Id</string>
    <string name="txtIdServicio">Id Servicio</string>

    <string name="txtId9">Id</string>
    <string name="txtNombre5">Nombre</string>
    <string name="txtDescripcion4">Descripcion</string>
    <string name="txtPrecio1">Precio</string>

    <string name="txtId10">Id</string>
    <string name="txtNombre6">Nombre</string>
    <string name="txtDni1">Dni</string>
    <string name="txtIdAgencia1">Id Agencia</string>
    <string name="txtFechaNacimiento">Fecha de nacimiento</string>

    <string name="txtId11">Id</string>
    <string name="txtNombre7">Nombre</string>
    <string name="txtDireccion1">Direccion</string>
    <string name="txtIdTipoCaso1">Id tipo caso</string>

    <string name="txtPrecio2">Precio</string>
    <string name="txvCliente">Cliente</string>

    <string name="txtId12">Id</string>
    <string name="txtNombre10">Nombre</string>
    <string name="txtCorreo3">Correo</string>
    <string name="txtFechaNacimiento2">Fecha Nacimiento</string>
    <string name="txtTelefono2">Telefono</string>

    <string name="txtId13">Id</string>
    <string name="txtNombre11">Nombre</string>
    <string name="txtDireccion2">Direccion</string>
    <string name="txtTelefono1">Telefono </string>
    <string name="txtBuscar">Buscar</string>



    <string name="txtIdCita1">Id Cita</string>
    <string name="txtFecha3">Fecha</string>
    <string name="txtDescripcion5">Descripcion</string>
    <string name="txtPrecio3">Precio </string>
    <string name="txtIdCaso3">Id Caso</string>





    <string name="Todo2">TODO</string>
    <string name="Todo">TODO</string>
    <string name="txtDescripcionConsulta">Descripción</string>


</resources>