<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3">

    <TextView
        android:id="@+id/txvClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="580dp"
        android:fontFamily="@font/copse"
        android:hint="@string/txvCliente"
        android:text="@string/txvCliente"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtId12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="460dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/copse"
        android:gravity="center"
        android:hint="@string/txtId12"
        android:inputType="textPersonName"
        android:text="@string/txtId12"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtBuscar"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtNombre10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginBottom="380dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtNombre10"
        android:inputType="textPersonName"
        android:text="@string/txtNombre10"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtFechaNacimiento2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginBottom="300dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtFechaNacimiento1"
        android:inputType="textPersonName"
        android:text="@string/txtFechaNacimiento2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtCorreo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginBottom="220dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtCorreo3"
        android:inputType="textPersonName"
        android:text="@string/txtCorreo3"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtTelefono2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtTelefono2"
        android:inputType="textPersonName"
        android:text="@string/txtTelefono2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/TODO"
        android:rotation="180"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/retroceder" />

    <TextView
        android:id="@+id/txtAgregar"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="376dp"
        android:background="@drawable/agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBuscar"
        app:layout_constraintVertical_bias="0.668" />

    <TextView
        android:id="@+id/txtActualizar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/actualizar1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtEliminar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/txtBuscar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="237dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="27dp"
        app:layout_constraintBottom_toTopOf="@+id/txtAgregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtId12"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lupa"
        android:contentDescription="@string/Todo" />

</androidx.constraintlayout.widget.ConstraintLayout>