<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="51dp"
        android:contentDescription="@string/TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="218dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="@drawable/botones"
        android:ems="10"
        android:fontFamily="@font/copse"
        android:hint="@string/txtUsuario"
        android:inputType="textPersonName"
        android:text="@string/txtUsuario"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtContraseña"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/botones"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/copse"
        android:hint="@string/txtContraseña"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvCrearCuenta"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="548dp"
        android:layout_marginEnd="86dp"
        android:background="@drawable/botones"
        android:fontFamily="@font/copse"
        android:gravity="center"
        android:text="@string/txvCrearCuenta"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvRegistrar"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginBottom="228dp"
        android:background="@drawable/botones"
        android:gravity="center"
        android:text="@string/txvRegistrar"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>