<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3">

    <TextView
        android:id="@+id/txvRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/copse"
        android:text="@string/txvRegistrarse"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtUsuario1"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginBottom="428dp"
        android:autofillHints=""
        android:background="@drawable/botones"
        android:ems="10"
        android:fontFamily="@font/copse"
        android:hint="@string/txtUsuario1"
        android:inputType="textPersonName"
        android:text="@string/txtUsuario1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtContraseña"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/botones"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/copse"
        android:hint="@string/txtContraseña"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvCrear"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginBottom="250dp"
        android:background="@drawable/botones"
        android:fontFamily="@font/copse"
        android:gravity="center"
        android:text="@string/txvCrear"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginBottom="491dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvRegistrarse"
        app:srcCompat="@drawable/user" />

</androidx.constraintlayout.widget.ConstraintLayout>